# Py-Kindergarten

./: .coverage  pyproject.toml
banking_client_services/: Schemas.py  app.py  models.py  settings.py
sessao02/: main.py  requirements.txt
sessao03pt1/: main.py  models.py  requirements.txt
sessao03pt2/: main.py
sessao03pt2/routes/: curso_router.py  usuario_router.py
sessao04/: create_tables.py  dev.db  main.py  requirements.txt
sessao04/api/v1/: api.py
sessao04/api/v1/endpoints/: curso.py
sessao04/core/: configs.py  database.py  deps.py
sessao04/models/: curso_model.py
sessao04/schemas/: curso_schema.py
sessao05/: create_tables.py  main.py  requirements.txt
sessao05/api/v1/: api.py
sessao05/api/v1/endpoints/: curso.py
sessao05/core/: configs.py  database.py  deps.py
sessao05/models/: curso_model.py
sessao06/: create_tables.py  main.py  requirements.txt
sessao06/api/v1/: api.py
sessao06/api/v1/endpoints/: artigo.py  usuario.py
sessao06/core/: auth.py  configs.py  database.py  deps.py  security.py
sessao06/model/: __all_models.py  artigo_model.py  usuario_model.py
sessao06/schemas/: artigo_schema.py  usuario_schema.py
sqla/01sqla_sync/: create_main.py  insert_main.py  requirements.txt
sqla/01sqla_sync/conf/: db_session.py
sqla/01sqla_sync/models/: __all_models.py  aditivo_nutritivo.py  conservante.py  ingrediente.py  lote.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipo_embalagem.py  tipo_picole.py
tests/: conftest.py  test_app.py
