[tool.poetry]
name = "banking-client-services"
version = "0.1.0"
description = ""
authors = ["Marcos Pacheco <mcp_marcos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pytest-cov = "^6.0.0"
pytest = "^8.3.3"
taskipy = "^1.14.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'PL', 'PT' ]

[tool.taskipy.tasks]
run = 'fastapi dev banking_client_services/app.py'

pre_test = 'task lint'
test = 'pytest --cov=banking_client_services -vv'
post_test = 'coverage html'

lint = 'ruff check .  && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
